# routes/api.php
@@ -2,13 +2,33 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\BookController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
+Route::prefix('user')->group(function () {
+    Route::get('/users', function () {
+        return $request->user();
+    });
+    Route::post('/register',[AuthController::class, 'register']);
+    Route::post('/login',[AuthController::class, 'login'])->name('login');
+    Route::post('/login',[AuthController::class, 'login']);
+    Route::post('/logout',[AuthController::class, 'logout'])->middleware('auth:api');
+});
 
-Route::apiResource('books', BookController::class);
+Route::resource('book', BookController::class, [
+        'only' => [
+            'index',
+            'show'
+        ]
+    ]);
+
+Route::resource('book', BookController::class, [
+    'except' => [
+        'index',
+        'show'
+    ]
+
+ ])->middleware(['auth:api']);
 
 
 
